--- a/src/Results/Result.css
+++ b/src/Results/Result.css
@@ -1,5 +1,5 @@
 .result-item {
-  padding: 5px 0px;
+  padding: 10px 5px;
   font-size: 15px;
 }
   
